-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 11.0.12
-
Component/s: hotspot
-
b01
$ CONF=linux-x86_64-normal-server-fastdebug make images
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-server_libjvm_objs_objectSampleCheckpoint.o:
In file included from /home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/gc/shared/gc_globals.hpp:28,
from /home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/runtime/globals.hpp:28,
from /home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/memory/allocation.hpp:28,
from /home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/classfile/classLoaderData.hpp:28,
from /home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/oops/klass.hpp:28,
from /home/shade/trunks/jdk-updates-jdk11u-dev/build/linux-x86_64-normal-server-fastdebug/hotspot/variant-server/gensrc/jfrfiles/jfrEventClasses.hpp:6,
from /home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/jfr/jfrEvents.hpp:32,
from /home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/jfr/leakprofiler/checkpoint/objectSampleCheckpoint.cpp:26:
/home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/jfr/leakprofiler/checkpoint/objectSampleCheckpoint.cpp: In static member function 'static void ObjectSampleCheckpoint::on_rotation(const ObjectSampler*)':
/home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/jfr/leakprofiler/checkpoint/objectSampleCheckpoint.cpp:298:14: error: 'JfrJavaSupport' has not been declared
298 | DEBUG_ONLY(JfrJavaSupport::check_java_thread_in_native(thread);)
| ^~~~~~~~~~~~~~
/home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/utilities/macros.hpp:393:26: note: in definition of macro 'DEBUG_ONLY'
393 | #define DEBUG_ONLY(code) code
| ^~~~
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-server_libjvm_objs_objectSampleCheckpoint.o:
In file included from /home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/gc/shared/gc_globals.hpp:28,
from /home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/runtime/globals.hpp:28,
from /home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/memory/allocation.hpp:28,
from /home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/classfile/classLoaderData.hpp:28,
from /home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/oops/klass.hpp:28,
from /home/shade/trunks/jdk-updates-jdk11u-dev/build/linux-x86_64-normal-server-fastdebug/hotspot/variant-server/gensrc/jfrfiles/jfrEventClasses.hpp:6,
from /home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/jfr/jfrEvents.hpp:32,
from /home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/jfr/leakprofiler/checkpoint/objectSampleCheckpoint.cpp:26:
/home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/jfr/leakprofiler/checkpoint/objectSampleCheckpoint.cpp: In static member function 'static void ObjectSampleCheckpoint::on_rotation(const ObjectSampler*)':
/home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/jfr/leakprofiler/checkpoint/objectSampleCheckpoint.cpp:298:14: error: 'JfrJavaSupport' has not been declared
298 | DEBUG_ONLY(JfrJavaSupport::check_java_thread_in_native(thread);)
| ^~~~~~~~~~~~~~
/home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/utilities/macros.hpp:393:26: note: in definition of macro 'DEBUG_ONLY'
393 | #define DEBUG_ONLY(code) code
| ^~~~
- relates to
-
JDK-8258414 OldObjectSample events too expensive
-
- Resolved
-
-
JDK-8265750 Fatal error in safepoint.cpp after backport of 8258414
-
- Resolved
-