8265718: Build failure after JDK-8258414 11u backport

Reviewed-by: stuefe, goetz